tests/purs/failing/3405.out
Error found:
in module [33mMain[0m
at tests/purs/failing/3405.purs:8:1 - 8:43 (line 8, column 1 - line 8, column 43)

  Orphan instance [33meqSomething[0m found for
  [33m                [0m
  [33m  Data.Eq.Eq Int[0m
  [33m                [0m
  This problem can be resolved by declaring the instance in [33mData.Eq[0m, or by defining the instance on a newtype wrapper.

in type class instance
[33m                      [0m
[33m  Data.Eq.Eq Something[0m
[33m                      [0m

See https://github.com/purescript/documentation/blob/master/errors/OrphanInstance.md for more information,
or to contribute content related to this error.

